Make sure text is readable

--- a/weather/weather.css
+++ b/weather/weather.css
@@ -73,6 +73,7 @@ body {
 	margin: 0;
 	list-style: none;
 	padding: 0;
+    font-size: 15px;
 }
 
 #infos {
